# aiotruenas-client

./: .gitignore  .pre-commit-config.yaml  Earthfile  README.md  earthly.sh  invoke_method.py  pyproject.toml  pyrightconfig.json  renovate.json  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  python-package.yml
aiotruenas_client/: __init__.py  dataset.py  disk.py  jail.py  job.py  machine.py  pool.py  virtualmachine.py
aiotruenas_client/websockets/: __init__.py  dataset.py  disk.py  interfaces.py  jail.py  job.py  machine.py  pool.py  protocol.py  virtualmachine.py
pyfreenas/: __init__.py  disk.py  machine.py  pool.py  virtualmachine.py  websockets_custom.py
pyfreenas/websockets/: __init__.py  disk.py  machine.py  pool.py  virtualmachine.py
scripts/: invoke_method.py  subscribe.py  version_bump.py
tests/: test_controller.py  test_disk.py  test_machine.py  test_pool.py  test_requirements.py  test_virtualmachine.py  test_virturalmachine.py
tests/data/freenas/: disk.query  pool.query  system.info  vm.query
tests/fakes/: fakeserver.py
tests/websockets/: test_dataset.py  test_disk.py  test_jail.py  test_job.py  test_machine.py  test_pool.py  test_protocol.py  test_virtualmachine.py
