[metadata]
name = aiotruenas-client
version = 0.10.0
author = Shawn Wilsher
author_email = me@shawnwilsher.com
description = A Python client library for the TrueNAS API
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
project_urls = 
	Bug Reports = https://github.com/sdwilsh/aiotruenas-client/issues
	Release Notes = https://github.com/sdwilsh/aiotruenas-client/releases/
	Source = https://github.com/sdwilsh/aiotruenas-client

[options]
python_requires = >3.8, <4
packages = find:
install_requires = 
	websockets ==11.0.1
	meteor-ejson == 1.1.0

[flake8]
max-line-length = 88
max-complexity = 10
select = E9,F63,F7,F82

